<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/subsTwoCancelButton"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="@dimen/dp10"
            android:contentDescription="@null"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_clear_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
             />

        <ImageView
            android:id="@+id/crownImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/ic_subs_crown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subsTwoCancelButton" />

        <TextView
            android:id="@+id/billingTitle"
            style="@style/AppText.Primary.Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:layout_marginHorizontal="24dp"
            android:text="@string/billing_title"
            android:textAllCaps="true"
            android:textSize="23sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/crownImage" />

        <TextView
            android:id="@+id/billingBodyTv"
            style="@style/AppText.Tertiary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="24dp"
            android:gravity="center"
            android:text="@string/billing_body"
            android:textColor="@color/text_black_sub"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/billingTitle" />

        <TextView
            android:id="@+id/premiumTv"
            style="@style/AppText.Tertiary.Smaller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="36dp"
            android:text="@string/premium"
            android:textAllCaps="true"
            android:textColor="@color/text_black_sub"
            app:layout_constraintEnd_toStartOf="@id/basicTv"
            app:layout_constraintTop_toBottomOf="@id/billingBodyTv" />

        <TextView
            android:id="@+id/basicTv"
            style="@style/AppText.Tertiary.Smaller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/basic"
            android:textAllCaps="true"
            android:textColor="@color/text_black_sub"
            app:layout_constraintBottom_toBottomOf="@id/premiumTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/premiumTv" />

        <ImageView
            android:id="@+id/iconCamouflageProCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/billing_feature_margin"
            android:contentDescription="@null"
            android:src="@drawable/ic_billing_check"
            app:layout_constraintEnd_toEndOf="@+id/premiumTv"
            app:layout_constraintStart_toStartOf="@+id/premiumTv"
            app:layout_constraintTop_toBottomOf="@+id/premiumTv" />

        <ImageView
            android:id="@+id/iconCamouflageBasicCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/billing_feature_margin"
            android:contentDescription="@null"
            android:src="@drawable/ic_billing_check"
            app:layout_constraintEnd_toEndOf="@+id/basicTv"
            app:layout_constraintStart_toStartOf="@+id/basicTv"
            app:layout_constraintTop_toBottomOf="@+id/basicTv" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/iconCamouflageTv"
            style="@style/AppText.Billing.Feature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0.0"
            android:singleLine="true"
            android:layout_marginStart="24dp"
            android:text="@string/point1"
            app:drawableStartCompat="@drawable/ic_vip_support"
            app:layout_constraintBottom_toBottomOf="@+id/iconCamouflageProCheck"
            app:layout_constraintEnd_toStartOf="@+id/iconCamouflageProCheck"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iconCamouflageProCheck" />

        <ImageView
            android:id="@+id/intruderSelfieProCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/billing_feature_margin"
            android:contentDescription="@null"
            android:src="@drawable/ic_billing_check"
            app:layout_constraintEnd_toEndOf="@+id/iconCamouflageProCheck"
            app:layout_constraintStart_toStartOf="@+id/iconCamouflageProCheck"
            app:layout_constraintTop_toBottomOf="@+id/iconCamouflageProCheck" />

        <ImageView
            android:id="@+id/intruderSelfieBasicCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/billing_feature_margin"
            android:contentDescription="@null"
            android:src="@drawable/ic_billing_check"
            app:layout_constraintEnd_toEndOf="@+id/iconCamouflageBasicCheck"
            app:layout_constraintStart_toStartOf="@+id/iconCamouflageBasicCheck"
            app:layout_constraintTop_toBottomOf="@+id/iconCamouflageBasicCheck" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/intruderSelfieTv"
            style="@style/AppText.Billing.Feature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0.0"
            android:singleLine="true"
            android:layout_marginStart="24dp"
            android:text="@string/point2"
            app:drawableStartCompat="@drawable/ic_find_in_page"
            app:layout_constraintBottom_toBottomOf="@+id/intruderSelfieProCheck"
            app:layout_constraintEnd_toStartOf="@+id/intruderSelfieProCheck"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/intruderSelfieProCheck" />


        <ImageView
            android:id="@+id/unlimitedFileProCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/billing_feature_margin"
            android:contentDescription="@null"
            android:src="@drawable/ic_billing_check"
            app:layout_constraintEnd_toEndOf="@+id/intruderSelfieProCheck"
            app:layout_constraintStart_toStartOf="@+id/intruderSelfieProCheck"
            app:layout_constraintTop_toBottomOf="@+id/intruderSelfieProCheck" />

        <ImageView
            android:id="@+id/unlimitedFileBasicCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/billing_feature_margin"
            android:contentDescription="@null"
            android:src="@drawable/ic_billing_check"
            app:layout_constraintEnd_toEndOf="@+id/intruderSelfieBasicCheck"
            app:layout_constraintStart_toStartOf="@+id/intruderSelfieBasicCheck"
            app:layout_constraintTop_toBottomOf="@+id/intruderSelfieBasicCheck" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/unlimitedFileTv"
            style="@style/AppText.Billing.Feature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            app:layout_constraintHorizontal_bias="0.0"
            android:text="@string/point3"
            app:drawableStartCompat="@drawable/ic_word_to_pdf"
            android:layout_marginStart="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/unlimitedFileProCheck"
            app:layout_constraintEnd_toStartOf="@+id/unlimitedFileProCheck"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/unlimitedFileProCheck" />


        <ImageView
            android:id="@+id/noAdsProCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/billing_feature_margin"
            android:contentDescription="@null"
            android:src="@drawable/ic_billing_check"
            app:layout_constraintEnd_toEndOf="@+id/unlimitedFileProCheck"
            app:layout_constraintStart_toStartOf="@+id/unlimitedFileProCheck"
            app:layout_constraintTop_toBottomOf="@+id/unlimitedFileProCheck" />

        <ImageView
            android:id="@+id/noAdsBasicCheck"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/billing_feature_margin"
            android:contentDescription="@null"
            android:src="@drawable/ic_billing_minus"
            app:layout_constraintEnd_toEndOf="@+id/unlimitedFileBasicCheck"
            app:layout_constraintStart_toStartOf="@+id/unlimitedFileBasicCheck"
            app:layout_constraintTop_toBottomOf="@+id/unlimitedFileBasicCheck" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/noAdsTv"
            style="@style/AppText.Billing.Feature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="24dp"
            android:text="@string/point4"
            app:drawableStartCompat="@drawable/ic_feed_icon"
            app:layout_constraintBottom_toBottomOf="@+id/noAdsProCheck"
            app:layout_constraintEnd_toStartOf="@+id/noAdsProCheck"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/noAdsProCheck" />

        <ImageView
            android:id="@+id/vipProCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/billing_feature_margin"
            android:contentDescription="@null"
            android:src="@drawable/ic_billing_check"
            app:layout_constraintEnd_toEndOf="@+id/noAdsProCheck"
            app:layout_constraintStart_toStartOf="@+id/noAdsProCheck"
            app:layout_constraintTop_toBottomOf="@+id/noAdsProCheck" />

        <ImageView
            android:id="@+id/vipBasicCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/billing_feature_margin"
            android:contentDescription="@null"
            android:src="@drawable/ic_billing_minus"
            app:layout_constraintEnd_toEndOf="@+id/noAdsBasicCheck"
            app:layout_constraintStart_toStartOf="@+id/noAdsBasicCheck"
            app:layout_constraintTop_toBottomOf="@+id/noAdsBasicCheck" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/vipSupportTv"
            style="@style/AppText.Billing.Feature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/vip_support"
            app:drawableStartCompat="@drawable/ic_vip_support"
            android:layout_marginStart="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/vipProCheck"
            app:layout_constraintEnd_toStartOf="@+id/vipProCheck"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/vipProCheck" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/subs_textPrice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vipSupportTv" />

        <TextView
            android:id="@+id/subs_textPrice"
            style="@style/AppText.Tertiary.Smaller"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:layout_marginHorizontal="24dp"
            android:text="+"
            android:textColor="@color/text_black_sub"
            app:layout_constraintBottom_toTopOf="@+id/subsyearly"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/subsyearly"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="24dp"
            android:background="@drawable/color_1_backgound_"
            android:gravity="center"
            android:outlineSpotShadowColor="@color/white"
            android:paddingHorizontal="15dp"
            android:text="@string/Continue"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/org_white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <TextView
            android:id="@+id/cancelRenew"
            style="@style/AppText.Tertiary.Smaller"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:layout_marginHorizontal="24dp"
            android:text="@string/subscription_will_auto_renew_cancel_anytime"
            android:textColor="@color/text_black_sub"
            app:layout_constraintTop_toBottomOf="@+id/subsyearly"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <!--        <LinearLayout-->
        <!--            android:id="@+id/oneTimePayBtn"-->
        <!--            style="@style/AppButton.Primary"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="50dp"-->
        <!--            android:layout_marginHorizontal="24dp"-->
        <!--            android:layout_marginBottom="16dp"-->
        <!--            android:background="@drawable/bg_billing_secondary_btn"-->
        <!--            android:paddingHorizontal="24dp"-->
        <!--            app:layout_constraintBottom_toTopOf="@+id/textView11"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent">-->

        <!--       &lt;!&ndash;     <TextView-->
        <!--                style="@style/AppText.Secondary"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_gravity="center_vertical"-->
        <!--                android:singleLine="true"-->
        <!--                android:text="@string/onetime_payment"-->
        <!--                android:textSize="14sp"-->
        <!--                android:textStyle="bold" />&ndash;&gt;-->

        <!--            <Space-->
        <!--                android:layout_width="0dp"-->
        <!--                android:layout_height="0dp"-->
        <!--                android:layout_weight="1" />-->

        <!--           &lt;!&ndash; <TextView-->
        <!--                android:id="@+id/oneTimePayAmountTv"-->
        <!--                style="@style/AppText.Secondary"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_gravity="end|center_vertical"-->
        <!--                android:text="$12.99/-"-->
        <!--                android:textSize="14sp"-->
        <!--                android:textColor="@color/colorAccent"-->
        <!--                android:textStyle="bold" />&ndash;&gt;-->

        <!--        </LinearLayout>-->


        <!--    <TextView
                android:id="@+id/textView11"
                style="@style/AppText.Tertiary.Smaller"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="16dp"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/subscription_will_auto_renew_cancel_anytime"
                android:textColor="@color/colorBillingNeutral"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />-->

        <!--      <FrameLayout
                  android:id="@+id/progressView"
                  android:layout_width="0dp"
                  android:layout_height="0dp"
                  android:background="@color/black"
                  android:clickable="true"
                  android:focusable="true"
                  app:layout_constraintBottom_toTopOf="@+id/textView11"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="@id/weeklyProductTv"
                  tools:alpha="0.5"
                  >

                  &lt;!&ndash;<ProgressBar
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:indeterminateTint="@color/colorAccent" />&ndash;&gt;

              </FrameLayout>-->

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>